<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_home_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:hint="@string/hint_name"
        android:inputType="textPersonName|none"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_text_home_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:hint="@string/hint_age"
        android:inputType="number|none"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_text_home_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:hint="@string/hint_height"
        android:inputType="numberDecimal|none"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/display_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_default_elevation"
            android:text="@string/display_info"
            android:layout_weight="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_default_elevation"
            android:layout_weight="0"
            android:text="@string/delete_info" />

    </LinearLayout>

</LinearLayout>