<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/edit_text_home_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:hint="@string/hint_name"
        android:inputType="textPersonName|none"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_home_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:hint="@string/hint_age"
        android:inputType="number|none"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_home_name" />

    <EditText
        android:id="@+id/edit_text_home_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:hint="@string/hint_height"
        android:inputType="numberDecimal|none"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_home_age"

        app:layout_constraintEnd_toStartOf="parent"/>

    <Button
        android:id="@+id/display_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_home_height"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/display_info"/>

    <Button
        android:id="@+id/delete_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_home_height"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete_info"
        />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/display_button_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>